force-app/main/default/objects/sugati__Questionnaire_Question__c/sugati__Questionnaire_Question__c.object-meta.xml
<CustomObject>
    <description>A list of Questions on each category.</description>
    <label>Questionnaire Question</label>
    <nameField>
        <displayFormat>QQ-{0000000000}</displayFormat>
        <label>Questionnaire Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>