force-app/main/default/objects/sugati__Questionnaire_Question__c/fields/sugati__Q_Question_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple-choice</fullName>
            </value>
            <value>
                <fullName>Multiple choice with other text box</fullName>
            </value>
            <value>
                <fullName>Multiple text box choice</fullName>
            </value>
            <value>
                <fullName>Single-choice</fullName>
            </value>
            <value>
                <fullName>Single choice with other text box</fullName>
            </value>
            <value>
                <fullName>Single choice with text Box</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>