force-app/main/default/objects/sugati__Questionnaire_Question__c/fields/sugati__QQ_Component__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQ_Component__c</fullName>
    <label>Component</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__SB_Components</valueSetName>
    </valueSet>
</CustomField>