force-app/main/default/objects/sugati__Questionnaire_Question__c/fields/sugati__QQ_Live__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQ_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>