force-app/main/default/objects/sugati__Questionnaire_Question__c/fields/sugati__QQ_Obsolete__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQ_Obsolete__c</fullName>
    <label>Obsolete</label>
    <type>Date</type>
</CustomField>