force-app/main/default/objects/sugati__Questionnaire_Question__c/fields/sugati__QQ_Old_Question__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQ_Old_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fill this in, if this question is linked to an Old Question.</inlineHelpText>
    <label>Old H&amp;S Question</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sugati__Questionnaire_Question__c.sugati__QQ_Questionnaire_Question_Category__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>H&amp;S</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Questionnaire_Question__c</referenceTo>
    <relationshipLabel>Questionnaire Questions</relationshipLabel>
    <relationshipName>Questionnaire_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>