force-app/main/default/objects/sugati__Questionnaire_Question__c/fields/sugati__QQ_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQ_Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>