force-app/main/default/objects/sugati__Questionnaire_Question__c/fields/sugati__QQ_Question__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQ_Question__c</fullName>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>