force-app/main/default/objects/sugati__Questionnaire_Question__c/fields/sugati__QQ_Questionnaire_Question_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQ_Questionnaire_Question_Category__c</fullName>
    <label>Questionnaire Question Category</label>
    <referenceTo>sugati__Questionnaire_Question_Category__c</referenceTo>
    <relationshipLabel>Questionnaire Questions</relationshipLabel>
    <relationshipName>Questionnaire_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>